@@ -6,9 +6,11 @@ DIST SABnzbd-0.7.11-src.tar.gz 2273355 SHA256 de9c22377e89b081b7c264993c159588ac
 DIST SABnzbd-0.7.12-src.tar.gz 2275110 SHA256 9763414af2b3b9eccf933d01dfe5404845aa4b2a5ce6b63c643fc5cb45d2fb9b SHA512 e1d09613146f76fb990aee648c8a61f6eda9473b1e422d4a90b77c6a54adebc25e4fedbbd1d163af5617bac489a75bc84a6b86cf03a80312966cd373e79da028 WHIRLPOOL 17fe329980282ac44b3a87a32fd27369bb560245fc039db4f7c87beed10fab71463adb1e4f13ba72aa3e4dd1e49c81c84c48b587f949df105ca05af1e0fd3c01
 DIST SABnzbd-0.7.13-src.tar.gz 2275234 SHA256 33ebef37e7cdbcc1e3a7436432d7701b3f2584b754176a4d9000ac125e25d690 SHA512 8462e7f39da0e2c829bebca97cbdbb5f6d314e04c408257064d68bf2d17fc37301e53daf695e8db6e5af82d844f6e99fbbed8c500e2bd3d3916a8b3431e1248c WHIRLPOOL cc9c14b6d86108038eee3c934aa1ecc2c95947d8493799b750cf59d1d44f81f5d13cc492fb0f4f8204cd64629e85f707b83b7f971bcb8ef296c65bf28f8bd1eb
 DIST SABnzbd-0.7.14-src.tar.gz 2275312 SHA256 b5aefb2911349697db3be86eca815622a2bddb4ab370ed5522b4b0322d45c843 SHA512 54eea9e14c2ef1730d8e4f29c4bb27c2e17ff1923e9e982b2075195663c7fe03224e59851369b730e94c2dd1711732f09082a6ecd470a603b28a5660be161d41 WHIRLPOOL 7bfab6c1ba2ccaab1fa77eb5d8fcd9b8a964e424bdce25f19756b1d77b6665b12050a773c2b2200633b05d67f6dd21e3c31ee320fdb20340a1cdc8a98a084e53
+DIST SABnzbd-0.7.16-src.tar.gz 2275768 SHA256 2c50496c8be81ac4498944a5209b2c6b3bdfecc48cf4e0df54552c5d985e5772 SHA512 ae97f093c34a100ab92949eb25a48db4c7d7d06c1fc082d3e8390d84e15dbdbbe4e682f47532cb84571039caab9aed377957522fa07b6a0f49c368eb77d66144 WHIRLPOOL 470f300f9f7b5f833d14c8170aee8690cddcfb9e442c3d9a6d108b155d6b2f7afab19010a7bf650c31e4ade5ca680433245a9c226948b52d8301861f5dc35965
 EBUILD sabnzbd-0.7.11.ebuild 2199 SHA256 43ba6fd39b3f90b20fcca42faca1cab428040c3fc9b297728402b4c80b88bb0c SHA512 ef3ff255985b5223a7f46f4cffc9b3e1922af1ef06f61b8fd116c1ffd68615ac021900e0d6dde7b4f0b666e8b9b4c3757c6bd2d79752ab4621062d2b883136fa WHIRLPOOL 786bcf8af08ed0fe9e351c251fe5869f1422db707fffae0b8e412d9cc6d95dd2f4a26ad3340762bc6cdf41edd3a8f23fc94f59e5638898ed9e9d44f53fae939b
 EBUILD sabnzbd-0.7.12.ebuild 2199 SHA256 43ba6fd39b3f90b20fcca42faca1cab428040c3fc9b297728402b4c80b88bb0c SHA512 ef3ff255985b5223a7f46f4cffc9b3e1922af1ef06f61b8fd116c1ffd68615ac021900e0d6dde7b4f0b666e8b9b4c3757c6bd2d79752ab4621062d2b883136fa WHIRLPOOL 786bcf8af08ed0fe9e351c251fe5869f1422db707fffae0b8e412d9cc6d95dd2f4a26ad3340762bc6cdf41edd3a8f23fc94f59e5638898ed9e9d44f53fae939b
 EBUILD sabnzbd-0.7.13.ebuild 2199 SHA256 43ba6fd39b3f90b20fcca42faca1cab428040c3fc9b297728402b4c80b88bb0c SHA512 ef3ff255985b5223a7f46f4cffc9b3e1922af1ef06f61b8fd116c1ffd68615ac021900e0d6dde7b4f0b666e8b9b4c3757c6bd2d79752ab4621062d2b883136fa WHIRLPOOL 786bcf8af08ed0fe9e351c251fe5869f1422db707fffae0b8e412d9cc6d95dd2f4a26ad3340762bc6cdf41edd3a8f23fc94f59e5638898ed9e9d44f53fae939b
 EBUILD sabnzbd-0.7.14.ebuild 2199 SHA256 43ba6fd39b3f90b20fcca42faca1cab428040c3fc9b297728402b4c80b88bb0c SHA512 ef3ff255985b5223a7f46f4cffc9b3e1922af1ef06f61b8fd116c1ffd68615ac021900e0d6dde7b4f0b666e8b9b4c3757c6bd2d79752ab4621062d2b883136fa WHIRLPOOL 786bcf8af08ed0fe9e351c251fe5869f1422db707fffae0b8e412d9cc6d95dd2f4a26ad3340762bc6cdf41edd3a8f23fc94f59e5638898ed9e9d44f53fae939b
-MISC ChangeLog 3524 SHA256 1385635718d1b54d131854dc168b019e02e6922b005cceedab24ee73181c5e32 SHA512 7c8be76af2bb6caac1bfc2ce86f1b894c2dddc13bbf7d2512d7ef89de417586675bc08ab36c4f10b94df1f2f112ef90d9c49028f2ced656c1de393454c715b18 WHIRLPOOL 23ef7cdddab91c1b94c726d26455799d2485a1b00af9e195ef6e702ba0aceb7a115fae0f541e04a9047cb81fe4fccaa20d6fb3e243cab082eb8a09fbaa7acab0
+EBUILD sabnzbd-0.7.16.ebuild 2199 SHA256 43ba6fd39b3f90b20fcca42faca1cab428040c3fc9b297728402b4c80b88bb0c SHA512 ef3ff255985b5223a7f46f4cffc9b3e1922af1ef06f61b8fd116c1ffd68615ac021900e0d6dde7b4f0b666e8b9b4c3757c6bd2d79752ab4621062d2b883136fa WHIRLPOOL 786bcf8af08ed0fe9e351c251fe5869f1422db707fffae0b8e412d9cc6d95dd2f4a26ad3340762bc6cdf41edd3a8f23fc94f59e5638898ed9e9d44f53fae939b
+MISC ChangeLog 3659 SHA256 ee09916efa785adf35bdba4cae004f497e9fa71e3fdca23ef4ba9e6cfa629c25 SHA512 731f1ef05e271863a4dde2c39a3f04b81c6dd62099a3550e8e85f3ffdc2c1d441807289c30f0885d330ffe7669385545558b1f38ec5d7386695a40219f4029e3 WHIRLPOOL f87d67fa2351024ed0765011e98b07927b6ebe23ab2c988c914d80cb541602f627ca98bbea45aea5b6b7d4405f1f6d6a87b10750e84d64e59ad3b2da53fab650
 MISC metadata.xml 354 SHA256 86d085ca453373b20774f1a383d8161ab68e816d04fdf0e592f7978d1f366330 SHA512 af3229b875db9e39376b7e274113430b858533562c9cd2a20a833e845fa835d0bcac2b793c4d7bc56d1fec0674b24f220da9c585009ae0eff173777183ed9e19 WHIRLPOOL 793aad64d70462bac4af754f8c55e42f16356d6912808aa4efeed308cd9f12a72faa5eb2c5b02cc2eae54f796f375b3ccf3c1f3301b77088ba55be52d5878da1
