@@ -2,6 +2,12 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*sabnzbd-0.7.16 (02 Sep 2013)
+
+  02 Sep 2013; Daniel Rune Jensen (soehest) <daniel@eth0.dk>
+  +sabnzbd-0.7.16.ebuild:
+  Version bump.
+
 *sabnzbd-0.7.14 (08 Jul 2013)
 
   08 Jul 2013; Daniel Rune Jensen (soehest) <daniel@eth0.dk>
